@@ -67,6 +67,9 @@ Version 8.8.3
 - Added spreadsheet object to Automation3 API
 - Added MJ/h to heat flow units (#675)
 - Updated IronPython version to v3.4.1
+- Fixed Cantera Interop sample
+- Fixed issue with Sensitivity Analysis utility (Classic UI) (#684)
+- Fixed issue with Optimization utility (Classic UI) (#688)
 - Fixed enthalpy and entropy calculation for Seawater Property Package (#682)
 - Fixed Pipe Segment external diameter calculation
 - Fixed issue with loading reaction sets for internal flowsheets in Flowsheet UO
